--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.6.0
+anyio==4.2.0
 asttokens==2.4.1
 click==8.1.7
 comm==0.2.0
@@ -7,7 +9,10 @@ debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.2.0
 executing==2.0.1
+fastapi==0.108.0
 fonttools==4.47.0
+h11==0.14.0
+idna==3.6
 ipykernel==6.27.1
 ipython==8.18.1
 jedi==0.19.1
@@ -30,6 +35,8 @@ prompt-toolkit==3.0.43
 psutil==5.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pydantic==2.5.3
+pydantic_core==2.14.6
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
@@ -40,11 +47,15 @@ scikit-learn==1.3.2
 scipy==1.11.4
 seaborn==0.13.1
 six==1.16.0
+sniffio==1.3.0
 stack-data==0.6.3
+starlette==0.32.0.post1
 textblob==0.17.1
 threadpoolctl==3.2.0
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.0
+typing_extensions==4.9.0
 tzdata==2023.3
+uvicorn==0.25.0
 wcwidth==0.2.12
